<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpNameActivity">


    <Button
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:layout_marginStart="12dp"

        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_button_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="181dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:text="@string/ask_name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:typeface="monospace"
        android:visibility="visible"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_name_text_view"
        android:layout_width="88dp"
        android:layout_height="23dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="96dp"
        android:text="@string/first_name"
        app:fontFamily="sans-serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="339dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_name_text_view"
        android:layout_width="88dp"
        android:layout_height="23dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="160dp"
        android:text="@string/last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="339dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/agreement_text_view"
        android:layout_width="333dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="232dp"
        android:text="@string/agreement"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_up_and_accept_button"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="226dp"
        android:layout_height="51dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/rounded_button_grey"

        android:enabled="false"
        android:text="@string/sign_up_and_accept"

        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>