<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpUsernameActivity">

    <Button
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:layout_marginStart="12dp"

        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_button_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="181dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:text="@string/ask_username"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:typeface="monospace"
        android:visibility="visible"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:text="@string/username_description"
        android:textSize="18sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="88dp"
        android:layout_height="23dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="176dp"
        android:text="@string/username"
        app:fontFamily="sans-serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="309dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="208dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/continue_button"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="226dp"
        android:layout_height="51dp"
        android:layout_marginTop="300dp"

        android:background="@drawable/rounded_button_grey"
        android:enabled="false"

        android:text="@string/Continue"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>